--- a/src/app/components/fruits/fruits.component.html
+++ b/src/app/components/fruits/fruits.component.html
@@ -1,7 +1,13 @@
 
  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css'>
  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/font/material-design-icons/Material-Design-Icons.woff'>
-<div class="row">
+
+
+
+
+      
+
+ <div class="row" >
 
   
 <div class="col s1">     
@@ -43,16 +49,16 @@
 
 
   <div class="col s11">
-  <div class="row">
-    <div class="col s4">
+  <div class="row" >
+    <div class="col s4" >
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
           <img  class="activator" src="../../../assets/apple.jpg">
         </div>
+    
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">Apple</span>
           <input type="number" min=0 max=20 placeholder="Enter your size of Quantity">
-          
           <input list="browsers" name="browser" placeholder="Enter your Quantity">
           <datalist id="browsers">
             <option value="250gm - RS 50">
@@ -60,8 +66,6 @@
             <option value="1KG - RS 180">
           </datalist>
           <input type="submit" class="btn btn-info" value="Add To Cart">
-          
-          
         </div>
       </div>
     </div>  
@@ -208,8 +212,8 @@
       </div>
     </div>  
 
-    <div class="col s4">
-      <div class="card">
+    <div class="col s4" >
+      <div class="card" >
         <div class="card-image waves-effect waves-block waves-light">
           <img class="activator" src="../../../assets/graps.jpg">
         </div>
@@ -235,7 +239,7 @@
           <img class="activator" src="../../../assets/pinaple1.jpg">
         </div>
         <div class="card-content">
-          <span class="card-title activator grey-text text-darken-4">Pinaple</span>
+          <span class="card-title activator grey-text text-darken-4">pinaple</span>
           <input type="number" min=0 max=20 placeholder="Enter your size of Quantity">
           
           <input list="browsers" name="browser" placeholder="Enter your Quantity">
