--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,6 +2,16 @@
 <nav class="#6a1b9a purple darken-3">
     <div class="nav-wrapper">
       <a  class="brand-logo">Navbar</a>
+      <div class="container">
+        <form class="form-inline waves-light" mdbWavesEffect>
+          <div class="md-form mt-0">
+            <div class="search-hero">
+              <input class="form-control mr-sm-2" type="text" name="search" placeholder="Search"/>
+            </div>
+          </div>
+        </form>
+      </div>
+  
       <ul class="right hide-on-med-and-down">
         <li><a routerLink="/veg">Cart</a></li>
         <li><a routerLink="/veg">Logout</a></li>
