Grocery UI with Cart UI

--- a/src/app/components/fruits/fruits.component.html
+++ b/src/app/components/fruits/fruits.component.html
@@ -4,56 +4,16 @@
 
 
 
-
       
 
  <div class="row" >
-
-  
-<div class="col s1">     
-  
-  <ul id="slide-out" class="side-nav fixed z-depth-2">
-    <li class="center no-padding">
-      <div class="purple darken-3 white-text" style="height: 180px;">
-        <div class="row">
-          <img style="margin-top: 5%;" width="100" height="100" src="https://res.cloudinary.com/dacg0wegv/image/upload/t_media_lib_thumb/v1463990208/photo_dkkrxc.png" class="circle responsive-img" />
-
-          <p style="margin-top: -10%;">
-            Grocery SOS
-          </p>
-        </div>
-      </div>
-    </li>
-
-    <li id="dash_dashboard"><a class="waves-effect" href="#!"><b>Home</b></a></li>
-
-    <ul class="collapsible" data-collapsible="accordion">
-      <li id="dash_users">
-        <div id="dash_users_header" class="collapsible-header waves-effect" routerLink="/veg"><b>Vegitables</b></div>
-      </li>
-
-      <li id="dash_products">
-        <div id="dash_products_header" class="collapsible-header waves-effect" routerLink="/fru"><b>Fruites</b></div>
-      </li>
-
-      <li id="dash_categories">
-        <div id="dash_categories_header" class="collapsible-header waves-effect"><b>Categories</b></div>
-      </li>
-
-      <li id="dash_brands">
-        <div id="dash_brands_header" class="collapsible-header waves-effect"><b>Brands</b></div>
-      </li>
-    </ul>
-  </ul>
-  </div>
-
 
   <div class="col s11">
   <div class="row" >
     <div class="col s4" >
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img  class="activator" src="../../../assets/apple.jpg">
+          <img  class="activator" src="../../../assets/fruties/apple.jpg">
         </div>
     
         <div class="card-content">
@@ -76,7 +36,7 @@
     <div class="col s4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="../../../assets/orange.jpg">
+          <img class="activator" src="../../../assets/fruties/orange.jpg">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">Orange</span>
@@ -97,7 +57,7 @@
     <div class="col s4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="../../../assets/banana.jpg">
+          <img class="activator" src="../../../assets/fruties/banana.jpg">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">Banana</span>
@@ -123,7 +83,7 @@
     <div class="col s4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="../../../assets/watermelon.jpg">
+          <img class="activator" src="../../../assets/fruties/watermelon.jpg">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">Watermelon</span>
@@ -144,7 +104,7 @@
     <div class="col s4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="../../../assets/lemon.jpg">
+          <img class="activator" src="../../../assets/vegitables/lemon.jpg">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">Lemon</span>
@@ -165,7 +125,7 @@
     <div class="col s4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="../../../assets/avacado.jpg">
+          <img class="activator" src="../../../assets/fruties/avacado.jpg">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">Avacado</span>
@@ -193,7 +153,7 @@
     <div class="col s4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="../../../assets/strawberries.jpg">
+          <img class="activator" src="../../../assets/fruties//strawberries.jpg">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">strawberries</span>
@@ -215,7 +175,7 @@
     <div class="col s4" >
       <div class="card" >
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="../../../assets/graps.jpg">
+          <img class="activator" src="../../../assets/fruties/graps.jpg">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">Grapes</span>
@@ -236,7 +196,7 @@
     <div class="col s4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="../../../assets/pinaple1.jpg">
+          <img class="activator" src="../../../assets/fruties/pinaple1.jpg">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">pinaple</span>
