--- a/src/app/components/vegitables/vegitables.component.html
+++ b/src/app/components/vegitables/vegitables.component.html
@@ -1,50 +1,8 @@
 
- <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css'>
- <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/font/material-design-icons/Material-Design-Icons.woff'>
-
 
 
 
  <div class="row">  
-<div class="col s1">     
-  
-  <ul id="slide-out" class="side-nav fixed z-depth-2">
-    <li class="center no-padding">
-      <div class="purple darken-3 white-text" style="height: 180px;">
-        <div class="row">
-          <img style="margin-top: 5%;" width="100" height="100" src="https://res.cloudinary.com/dacg0wegv/image/upload/t_media_lib_thumb/v1463990208/photo_dkkrxc.png" class="circle responsive-img" />
-
-          <p style="margin-top: -10%;">
-            Grocery SOS
-          </p>
-        </div>
-      </div>
-    </li>
-
-    <li id="dash_dashboard"><a class="waves-effect" href="#!"><b>Home</b></a></li>
-
-    <ul class="collapsible" data-collapsible="accordion">
-      <li id="dash_users">
-        <div id="dash_users_header" class="collapsible-header waves-effect" routerLink="/veg"><b>Vegitables</b></div>
-      </li>
-
-      <li id="dash_products">
-        <div id="dash_products_header" class="collapsible-header waves-effect" routerLink="/fru"><b>Fruites</b></div>
-      </li>
-
-      <li id="dash_categories">
-        <div id="dash_categories_header" class="collapsible-header waves-effect"><b>Categories</b></div>
-      </li>
-
-      <li id="dash_brands">
-        <div id="dash_brands_header" class="collapsible-header waves-effect"><b>Brands</b></div>
-      </li>
-    </ul>
-  </ul>
-
-  
-
-  </div>
 
 
   <div class="col s11">
@@ -54,7 +12,7 @@
     <div class="col s4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img  class="activator" src="../../../assets/poteto.jpg">
+          <img  class="activator" src="../../../assets/vegitables//poteto.jpg">
         </div>
         
         <div class="card-content">
@@ -80,7 +38,7 @@
     <div class="col s4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="../../../assets/tomato.jpg">
+          <img class="activator" src="../../../assets/vegitables//tomato.jpg">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">Tomato</span>
@@ -102,7 +60,7 @@
     <div class="col s4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="../../../assets/kaliflower.jpg">
+          <img class="activator" src="../../../assets/vegitables//kaliflower.jpg">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">Kaliflower</span>
@@ -129,7 +87,7 @@
     <div class="col s4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="../../../assets/mushroom.jpg">
+          <img class="activator" src="../../../assets/vegitables//mushroom.jpg">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">Mushroom</span>
@@ -150,7 +108,7 @@
     <div class="col s4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="../../../assets/bellpepper.jpg">
+          <img class="activator" src="../../../assets/vegitables/bellpepper.jpg">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">Bell Pepper</span>
@@ -172,7 +130,7 @@
     <div class="col s4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="../../../assets/lettuse.jpg">
+          <img class="activator" src="../../../assets/vegitables//lettuse.jpg">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">Lettuse</span>
@@ -199,7 +157,7 @@
     <div class="col s4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="../../../assets/beetroot.jpg">
+          <img class="activator" src="../../../assets/vegitables/beetroot.jpg">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">Beetroot</span>
@@ -221,7 +179,7 @@
     <div class="col s4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="../../../assets/onion.jpg">
+          <img class="activator" src="../../../assets/vegitables/onion.jpg">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">Onion</span>
@@ -242,7 +200,7 @@
     <div class="col s4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="../../../assets/cabbage.jpg">
+          <img class="activator" src="../../../assets/vegitables/cabbage.jpg">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">Cabbage</span>
@@ -269,7 +227,7 @@
     <div class="col s4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="../../../assets/bracooli.jpg">
+          <img class="activator" src="../../../assets/vegitables/bracooli.jpg">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">Broccoli</span>
@@ -290,7 +248,7 @@
     <div class="col s4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="../../../assets/brinjal.jpg ">
+          <img class="activator" src="../../../assets/vegitables/brinjal.jpg ">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">Brinjal</span>
@@ -311,7 +269,7 @@
     <div class="col s4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
-          <img class="activator" src="../../../assets/carrot.jpeg">
+          <img class="activator" src="../../../assets/vegitables/carrot.jpeg">
         </div>
         <div class="card-content">
           <span class="card-title activator grey-text text-darken-4">Carrot</span>
