--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,15 @@
+
+ <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css'>
+ <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/font/material-design-icons/Material-Design-Icons.woff'>
+
+
+
 <!-- Dropdown Structure -->  
 <nav class="#6a1b9a purple darken-3">
     <div class="nav-wrapper">
       <a  class="brand-logo">Navbar</a>
-      <div class="container">
+     
+     <!-- <div class="container">
         <form class="form-inline waves-light" mdbWavesEffect>
           <div class="md-form mt-0">
             <div class="search-hero">
@@ -10,14 +17,60 @@
             </div>
           </div>
         </form>
-      </div>
+      </div>--> 
+
+
+
+
   
       <ul class="right hide-on-med-and-down">
-        <li><a routerLink="/veg">Cart</a></li>
+        <li><a routerLink="/veg" routerLink="/cart" >Cart</a></li>
         <li><a routerLink="/veg">Logout</a></li>
       </ul>
     </div>
   </nav>
+
+
+<!--Side Nav-->
+  <div class="col s1">     
+  
+    <ul id="slide-out" class="side-nav fixed z-depth-2">
+      <li class="center no-padding">
+        <div class="purple darken-3 white-text" style="height: 180px;">
+          <div class="row">
+            <img style="margin-top: 5%;" width="100" height="100" src="https://res.cloudinary.com/dacg0wegv/image/upload/t_media_lib_thumb/v1463990208/photo_dkkrxc.png" class="circle responsive-img" />
+  
+            
+            <p style="margin-top: -10%;">
+              Grocery SOS
+            </p>
+          </div>
+        </div>
+      </li>
+  
+      <li id="dash_dashboard"><a class="waves-effect" href="#!"><b>Home</b></a></li>
+  
+      <ul class="collapsible" data-collapsible="accordion">
+        <li id="dash_users">
+          <div id="dash_users_header" class="collapsible-header waves-effect" routerLink="/veg"><b>Vegitables</b></div>
+        </li>
+  
+        <li id="dash_products">
+          <div id="dash_products_header" class="collapsible-header waves-effect" routerLink="/fru"><b>Fruites</b></div>
+        </li>
+  
+        <li id="dash_categories">
+          <div id="dash_categories_header" class="collapsible-header waves-effect" routerLink="/gro"><b>Groceries</b></div>
+        </li>
+  
+        <li id="dash_brands">
+          <div id="dash_brands_header" class="collapsible-header waves-effect" routerLink="/rice"><b>Rice,Grains & Pulses</b></div>
+        </li>
+      </ul>
+    </ul>
+    </div>
+    
+<!--Side Nav-->
 
 
 
